feat(frontend): file upload, /entry & /data ui improvements and api fetching (#84)
* feat(frontend): upload a file done, made the entry page better

* feat(frontend): better entries table, upload error display, upload fix, different entry api calls, data fetching fix

* fix(frontend): fixed entry id and related navigation

* feat(backend): endpoint /table/{id} and /plots/{id} added, synchronized with frontend

---------
